<resources>
    <string name="app_name">森林公安综合管理移动终端</string>
    <string name="action_settings">Settings</string>
    <string name="network_error">您的网络已经断开，请检查网络!</string>
    <string name="server_connecttimeout_exception">连接服务器超时，请求失败!</string>
    <string name="server_data_exception">服务器数据异常!</string>
    <string name="server_url_error_exception">连接服务器异常，请检查您的服务器连接配置!</string>
    <string name="server_error">系统发生错误，请求失败!</string>
    <string name="service_error">服务器地址错误，请重新设置！</string>
    <string name="request_error">请求发生错误，请求失败!</string>
    <string name="server_connect_exception">连接服务器异常，请求失败!</string>
    <string name="unknown_server_name_exception">服务器连接地址不正确连接异常，请求失败!</string>
    <string name="resolve_data_error">解析数据发生了错误，请耐心等待!</string>
    <string name="title_activity_login">Sign in</string>
    <string name="camera">拍照</string>
    <string name="photo">从手机相册中选择</string>
    <string name="tv_server_ip">服务器地址：</string>
    <string name="tv_server_api_ports">客户端端口：</string>
    <string name="tv_server_web_ports">服务器端口：</string>
    <string name="tv_server_ips">(内网)服务器地址：</string>
    <string name="net_dialog_yes">确   定</string>
    <string name="safet_precautions_3">野生动物情况登记</string>
    <string name="safet_precautions_4">重点保护植物情况登记</string>
    <string name="basic_account_childmenu_3">重点列管人（单位）情况</string>
    <string name="basic_account_childmenu_12">涉林重点行业情况登记</string>
    <string name="basic_account_childmenu_8">林地内开采沙、土、石、矿情况登记</string>
    <string name="basic_account_childmenu_9">木材采伐场（点）登记</string>
    <string name="basic_account_childmenu_10">情报信息登记</string>
    <string name="basic_account_childmenu_11">社会情况统计</string>
    <string name="security_management_2">派出所林区治安管理检查登记</string>
    <string name="law_enforcement_3">林区治安防控巡逻检查</string>
    <string name="law_enforcement_1">新增报警信息</string>
    <string name="law_enforcement_2">我的案件</string>
    <string name="law_enforcement_4">处警信息</string>
    <string name="law_enforcement_5">处警审批</string>
    <string name="law_enforcement_6">公安处审批</string>
    <string name="law_enforcement_7">处理结果</string>
    <string name="law_enforcement_8">询问笔录</string>
    <string name="welcome">您好！</string>
    <string name="btIntranet">局域网</string>
    <string name="logo">软件Logo</string>
    <string name="gps">定位</string>
    <string name="signature_save">保存</string>
    <string name="signature_update">修改</string>
    <string name="signature_clear">清除</string>
    <string name="signature_synchronous">同步</string>
    <string name="vudio">录像</string>
    <string name="record">录音</string>
    <string name="sex">性别</string>
    <string name="boy">男</string>
    <string name="girl">女</string>
    <string name="add">添加</string>
    <string name="note">备\t\t\t注</string>
    <string name="str_toast_net">请检查网络</string>
    <string name="net_dialog_title">当前没有可以使用的网络，请设置网络！</string>
    <string name="net_dialog_content">网络状态提示</string>
    <string name="security">开始巡逻</string>
    <string name="stopsecurity">结束巡逻</string>
    <string name="search">搜索</string>
    <string name="search_nearby">搜索附近</string>
    <string name="search_animal">动物名称</string>
    <string name="search_plant">植物名称</string>
    <string name="search_part_name">重点部位名称</string>
    <string name="search_part_siting">坐落地点</string>
    <string name="search_managed_object">姓名或单位名称</string>
    <string name="add_animal">新增重点保护动物</string>
    <string name="add_parts">新增重点部位</string>
    <string name="add_plant">新增重点保护植物</string>
    <string name="add_managed_object">新增重点列管人员</string>
    <string name="dialog_message_loading">努力加载中！请稍候……</string>
    <string name="dialog_message_updateOption">正在更新数据包！请稍候……</string>
    <string name="toast_message_updateOption">数据包更新成功！</string>
    <string name="toast_message_updateOption_error">数据包更新失败！</string>
    <string name="dialog_message_uploaded">已上传至服务器！</string>
    <string name="dialog_message_upload">数据上传中！请稍侯……</string>
    <string name="toast_message_upload_failure">上传数据失败！已经保存到本地数据库！</string>
    <string name="toast_message_upload_netException">网络异常！已经保存到本地数据库！</string>
    <string name="toast_message_Abnormal_server">服务器异常！请稍候再试……</string>
    <string name="toast_message_no_data">没有查到您要的数据！</string>
    <string name="toast_message_no_law">没有查到您要的法律法规！</string>
    <string name="toast_message_no_Onduty">没有今天的值班记录！</string>
    <string name="toast_message_netException">网络异常！请检查网络设置或稍候再试！</string>
    <string name="toast_message_no_news">没有发送给您的消息！</string>
    <string name="tanzhesi">三情</string>
    <string name="linqing">林情</string>
    <string name="shanqing">山情</string>
    <string name="sheqing">社情</string>
    <string name="addlinqing">新增林情</string>
    <string name="addshanqing">新增山情</string>
    <string name="addsheqing">新增社情</string>
    <string name="forest_area">林地面积(亩)</string>
    <string name="forest_cumulation">林地蓄积量</string>
    <string name="lawcase">涉林案件高发区</string>
    <string name="animal_activity">野生动物主要活动地区</string>
    <string name="animal_market">野生动物市场</string>
    <string name="zoology_manage">生态管护员情况</string>
    <string name="graze_breed">放牧养殖户</string>
    <string name="specialty_people">专业数量及人数</string>
    <string name="halfspecialty_people">半专业数量及人数</string>
    <string name="emphasis_manage">重点列管人员</string>
    <string name="forest_type">森林的种类</string>
    <string name="village_name">辖区名称</string>
    <string name="allarea">行政区域总面积(公顷)</string>
    <string name="elevation">海拔</string>
    <string name="terrain">地形地貌</string>
    <string name="coordinate">经纬度</string>
    <string name="region">截然地区(四至)</string>
    <string name="location">河流湖泊位置</string>
    <string name="oreresources">矿产资源分布</string>
    <string name="specialty">地区特产</string>
    <string name="trafficroad">交通道路分布</string>
    <string name="resident">居民人口数</string>
    <string name="stay">暂住人口数</string>
    <string name="permanent">行政村常住人口数</string>
    <string name="trafficcondition">交通分布情况</string>
    <string name="custom">清明节扫墓时间及风俗</string>
    <string name="culturalrelic">文物古迹</string>
    <string name="repast">主要餐饮业情况</string>
    <string name="income">主要产业及经济来源</string>
    <string name="patients">呆、傻精神病人情况</string>
    <string name="produce">特色物产</string>
    <string name="contact">村领导干部及联系方式</string>
    <string name="bycontract">土地承包情况</string>
    <string name="approval">审批</string>
    <string name="next">提交</string>
    <string name="alarm_id_card">身份证号：</string>
    <string name="alarm_phone">联系方式：</string>
    <string name="alarm_age">年龄：</string>
    <string name="alarm_sex">性别：</string>
    <string name="alarm_nation">民族：</string>
    <string name="alarm_address">暂住地址：</string>
    <string name="alarm_1">报警信息</string>
    <string name="alarm_2">出警审批</string>
    <string name="alarm_3">处警信息</string>
    <string name="alarm_4">附件及备注</string>
    <string name="alarm_5">处警部门意见</string>
    <string name="alarm_6">公安处意见</string>
    <string name="alarm_7">处理结果</string>
    <string name="organized_police">主办民警：</string>
    <string name="co_police">协办民警：</string>
    <string name="police_opinion">出警意见：</string>
    <string name="dispose_alarm">处警信息</string>
    <string name="suspicion_person">嫌疑人信息</string>
    <string name="case_idea">简要情况及意见</string>
    <string name="admin_idea_image">处警部门意见</string>
    <string name="instruction_date_time"> 接到处警 \t\n  指令时间：</string>
    <string name="time_to_reach">确定到达警情现场</string>
    <string name="suspect_name">嫌疑人姓名：</string>
    <string name="alarming_opinion">处理意见：</string>
    <string name="alarm_first_content">初查简要情况\n(时间、地点、\n人员、事实\n经过等)：</string>
    <string name="prisoner_culture">文化程度：</string>
    <string name="prisoner_unit">工作单位：</string>
    <string name="prisoner_address">住址：</string>
    <string name="prisoner_unitname">单位名称：</string>
    <string name="prisoner_unitaddress">地址：</string>
    <string name="legal_person">法定代表人：</string>
    <string name="prisoner_job">职务：</string>
    <string name="alarming_note">备注：</string>
    <string name="people_management">人口管理</string>
    <string name="people_management_1">辖区暂住人口登记</string>
    <string name="people_management_2">辖区重点人口登记</string>
    <string name="security_management">巡防检查</string>
    <string name="security_management_1">林区治安巡逻登记</string>
    <string name="safet_precautions">治安管理</string>
    <string name="safet_precautions_1">林情基本情况登记</string>
    <string name="safet_precautions_2">重点部位登记</string>
    <string name="law_enforcement">执法办案</string>
    <string name="fire_prevention">防火工作</string>
    <string name="fire_prevention_1">发生火情登记</string>
    <string name="fire_prevention_2">违法用火行为人登记</string>
    <string name="fire_prevention_3">防火巡逻检查</string>
    <string name="fire_prevention_4">辖区瞭望塔登记</string>
    <string name="fire_prevention_5">辖区防火重点部位登记</string>
    <string name="patrol_route_management">路线管理</string>
    <string name="patrol_route_management_name">路线名称</string>
    <string name="patrol_route_management_pavement_properties">路面性质</string>
    <string name="start">开始记录</string>
    <string name="stop">停止记录</string>
    <string name="continue_to">继续记录</string>
    <string name="the_working_log">工作日志</string>
    <string name="the_working_log_date">当天日期</string>
    <string name="police_on_duty">值班民警</string>
    <string name="class_leaders">带班领导</string>
    <string name="the_main_work_and_important_events">主要工作情况及重要事件</string>
    <string name="query_information">信息查询</string>
    <string name="query_information_1">法律法规</string>
    <string name="query_information_2">重点单位</string>
    <string name="query_information_3">重点保护野生动物</string>
    <string name="query_information_4">重点保护野生植物</string>
    <string name="etPrisoner_Unit">工作单位</string>
    <string name="etPrisoner_Address">住址</string>
    <string name="etPrisoner_UnitName">单位名称</string>
    <string name="etPrisoner_UnitAddress">地址</string>
    <string name="etLegal_Person">法定代表人</string>
    <string name="PrisonerCulture">文化程度</string>
    <string name="spPrisoner_Job">职务</string>
    <string name="sAlarmMode">接警方式：</string>
    <string name="etAlarm_FirstContent">初查简要情况(时间、地点、人员、事实经过等)</string>
    <string name="Alarm_Nation">民族</string>
    <string name="Alarm_Opinion">处警民警意见</string>
    <string name="etFirst_endTime">初查结束时间</string>
    <string name="etAlarm_Time">处警警民警意见填写时间</string>
    <string name="etAlarmL_Time">部门负责人意见填写时间</string>
    <string name="Responsible">处警部门负责人意见</string>
    <string name="PolicePrincipal">森林公安机关负责人批示</string>
    <string name="apAdvice">领导建议</string>
    <string name="name">姓名</string>
    <string name="address">暂住地址</string>
    <string name="id_card">身份证号</string>
    <string name="phone">联系方式</string>
    <string name="age">年龄</string>
    <string name="unitName">单位名称</string>
    <string name="unitAdd">经营地点</string>
    <string name="legalRepresentative">法人代表</string>
    <string name="head">负责人</string>
    <string name="businessProject">经营项目</string>
    <string name="businessPractice">经营方式</string>
    <string name="checkTheTime">检查时间</string>
    <string name="inspectors">检查人员</string>
    <string name="traffic">交通情况</string>
    <string name="latLonAltitude">经纬度及海拔</string>
    <string name="scopeAndNature">经营范围及性质</string>
    <string name="fourCases">四至情况</string>
    <string name="four_cases_east">东至</string>
    <string name="four_cases_west">西至</string>
    <string name="four_cases_south">南至</string>
    <string name="four_cases_north">北至</string>
    <string name="fsSurrounding">周边林情</string>
    <string name="theReasonTube">列管原因</string>
    <string name="cuttingunit">采伐单位或个人</string>
    <string name="cuttinglocation">采伐地点</string>
    <string name="cuttingcardid">采伐证号</string>
    <string name="allowcount">批准采伐数量</string>
    <string name="cuttingspecies">采伐树种</string>
    <string name="cuttingmode">采伐方式</string>
    <string name="cuttingcount">进入林区采伐人员数</string>
    <string name="cuttingbegintime">开始采伐时间</string>
    <string name="cuttingendtime">采伐结束时间</string>
</resources>