<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:orientation="vertical" >
    
<EditText
        android:id="@+id/etCuttingUnit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/edittext_bg"
        android:ems="10"
        android:hint="@string/cuttingunit"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:maxLength="11"
        android:padding="5dp"
        android:singleLine="true" />
<EditText
        android:id="@+id/etCuttingLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/edittext_bg"
        android:ems="10"
        android:hint="@string/cuttinglocation"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:padding="5dp"
        android:singleLine="true" />
<EditText
        android:id="@+id/etCuttingCardID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/edittext_bg"
        android:ems="10"
        android:hint="@string/cuttingcardid"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:maxLength="20"
        android:padding="5dp"
        android:singleLine="true" />
<EditText
        android:id="@+id/etAllowCount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/edittext_bg"
        android:ems="10"
        android:hint="@string/allowcount"
        android:imeOptions="actionNext"
        android:inputType="number"
        android:maxLength="11"
        android:padding="5dp"
        android:singleLine="true" />
<EditText
        android:id="@+id/etCuttingSpecies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/edittext_bg"
        android:ems="10"
        android:hint="@string/cuttingspecies"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:maxLength="11"
        android:padding="5dp"
        android:singleLine="true" />
<EditText
        android:id="@+id/etCuttingMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/edittext_bg"
        android:ems="10"
        android:hint="@string/cuttingmode"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:maxLength="11"
        android:padding="5dp"
        android:singleLine="true" />
<EditText
        android:id="@+id/etCuttingCount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/edittext_bg"
        android:ems="10"
        android:hint="@string/cuttingcount"
        android:imeOptions="actionNext"
        android:inputType="number"
        android:maxLength="11"
        android:padding="5dp"
        android:singleLine="true" />

<com.yhkj.yhsx.forestpolicemobileterminal.widget.DateInputEditText
        android:id="@+id/etCuttingBeginTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/edittext_bg"
        android:ems="10"
        android:hint="@string/cuttingbegintime"
        android:padding="5dp" />

<com.yhkj.yhsx.forestpolicemobileterminal.widget.DateInputEditText
        android:id="@+id/etCuttingEndTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/edittext_bg"
        android:ems="10"
        android:hint="@string/cuttingendtime"
        android:padding="5dp" />
</LinearLayout>
