<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp" >

    <EditText
        android:id="@+id/etSmir_UnitName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_bg"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/unitName"
        android:lines="2"
        android:padding="5dp" />

    <EditText
        android:id="@+id/etSmir_UnitAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_bg"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/unitAdd"
        android:lines="2"
        android:padding="5dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <EditText
            android:id="@+id/etSmir_LegalRepresentative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/edittext_bg"
            android:ems="10"
            android:hint="@string/legalRepresentative"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:padding="5dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/etSmir_Head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/edittext_bg"
            android:ems="10"
            android:hint="@string/head"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:padding="5dp"
            android:singleLine="true" >
        </EditText>
    </LinearLayout>

    <EditText
        android:id="@+id/etSmir_BusinessProject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_bg"
        android:ems="10"
        android:hint="@string/businessProject"
        android:imeOptions="actionNext"
        android:padding="5dp"
        android:singleLine="true" />

    <EditText
        android:id="@+id/etSmir_BusinessPractice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_bg"
        android:ems="10"
        android:hint="@string/businessPractice"
        android:padding="5dp" />

    <com.yhkj.yhsx.forestpolicemobileterminal.widget.DateInputEditText
        android:id="@+id/etSmir_CheckTheDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_bg"
        android:ems="10"
        android:hint="@string/checkTheTime"
        android:imeOptions="actionNext"
        android:padding="5dp"
        android:singleLine="true" />

    <EditText
        android:id="@+id/etSmir_Inspectors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_bg"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/inspectors"
        android:lines="2"
        android:padding="5dp" />

</LinearLayout>