<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical" >

        <EditText
            android:id="@+id/etPrisoner_Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/edittext_bg"
            android:ems="10"
            android:hint="@string/name"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:padding="5dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/etPrisoner_Age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/edittext_bg"
            android:ems="10"
            android:hint="@string/age"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:padding="5dp"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/tvPrisoner_Sex"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/sex"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RadioGroup
            android:id="@+id/rgPrisoner_Sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/rbPrisoner_boy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:checked="true"
                android:text="@string/boy" />

            <RadioButton
                android:id="@+id/rbPrisoner_girl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/girl" />
        </RadioGroup>
    </LinearLayout>

    <Spinner
        android:id="@+id/spPrisonerCulture"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:spinnerMode="dialog" />

    <EditText
        android:id="@+id/etPrisoner_Unit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_bg"
        android:ems="10"
        android:hint="@string/etPrisoner_Unit"
        android:inputType="textMultiLine"
        android:padding="5dp" />

    <EditText
        android:id="@+id/etPrisoner_Address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_bg"
        android:ems="10"
        android:hint="@string/etPrisoner_Address"
        android:inputType="textMultiLine"
        android:padding="5dp" />

    <EditText
        android:id="@+id/etPrisoner_UnitName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_bg"
        android:ems="10"
        android:hint="@string/etPrisoner_UnitName"
        android:inputType="textMultiLine"
        android:padding="5dp" />

    <EditText
        android:id="@+id/etPrisoner_UnitAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_bg"
        android:ems="10"
        android:hint="@string/etPrisoner_UnitAddress"
        android:inputType="textMultiLine"
        android:padding="5dp" />

    <Spinner
        android:id="@+id/spPrisoner_Job"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:spinnerMode="dialog" />

    <EditText
        android:id="@+id/etLegal_Person"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_bg"
        android:ems="10"
        android:hint="@string/etLegal_Person"
        android:inputType="textMultiLine"
        android:padding="5dp" />

</LinearLayout>