<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp" >

    <EditText
        android:id="@+id/etAlarm_Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_bg"
        android:ems="10"
        android:hint="@string/name"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:padding="5dp"
        android:singleLine="true" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/tvAlarm_Sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/sex"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RadioGroup
            android:id="@+id/rgAlarm_Sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/rbAlarm_boy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/boy" />

            <RadioButton
                android:id="@+id/rbAlarm_girl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/girl" />
        </RadioGroup>
    </LinearLayout>

    <EditText
        android:id="@+id/etAlarmAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_bg"
        android:ems="10"
        android:hint="@string/age"
        android:imeOptions="actionNext"
        android:inputType="number"
        android:padding="5dp"
        android:singleLine="true" />

    <Spinner
        android:id="@+id/spAlarm_AlarmNationality"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:spinnerMode="dialog" />

    <EditText
        android:id="@+id/etAlarm_Phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_bg"
        android:ems="10"
        android:hint="@string/phone"
        android:imeOptions="actionNext"
        android:inputType="phone"
        android:maxLength="11"
        android:padding="5dp"
        android:singleLine="true" />

    <EditText
        android:id="@+id/etAlarm_Add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_bg"
        android:ems="10"
        android:hint="@string/address"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:padding="5dp"
        android:singleLine="true" />

    <EditText
        android:id="@+id/etAlarm_IDCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_bg"
        android:ems="10"
        android:hint="@string/id_card"
        android:imeOptions="actionNext"
        android:inputType="numberSigned"
        android:maxLength="18"
        android:padding="5dp"
        android:singleLine="true" />

</LinearLayout>